welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
var n66=0
var n67=0
	for (i<- 0 to nums.length) {
		if(nums(i) == nums(i+1) == 6) {
		n66 = n66+1
		}
	for (i<- 0 to nums.length) {
		if(nums(i) ==6 && nums(i+1) == 7) {
		n66 = n66+1
		}
	} 
	return n66 
}
